# AMFTravellingWave

./: README.md  pyproject.toml
DAPI Cellophane_minimal/: README.MD
DAPI Cellophane_minimal/Notebooks/: Calculate_Nuclear_Density.ipynb  Mask_correction.ipynb
Figure_plots/: EDFig1.ipynb  EDFig11.ipynb  EDFig12.ipynb  EDFig2.ipynb  EDFig3.ipynb  EDFig4.ipynb  EDFig5.ipynb  EDFig6.ipynb  EDFig7.ipynb  EDFig8.ipynb  EDFig9.ipynb  Fig2.ipynb  Fig3.ipynb  Fig5.ipynb
Figure_plots/Fig4/BAS/: BASrate.m  README_BAS.txt
Figure_plots/Fig4/Efficiency/: NetworkEfficiency.m  NetworkEfficiencyLoop.m  README_Efficiency.txt
IRMDataNotebook/: INOQCalculatorClassic_VK_FINAL.xls  RebutalddPCR_VK.xlsx  ~$_Results_VK.docx
IRMDataNotebook/notebooks/: 0_Creating_crops_for_training.ipynb  1_training - AMF.ipynb  2_prediction-AMF.ipynb  Calculate_Nuclear_Density.ipynb  Mask_correction.ipynb
LICENSE/: code_license.txt
amftrack/pipeline/functions/image_processing/: extract_width_fun.py
amftrack/pipeline/functions/post_processing/: area_hulls.py  area_hulls_util.py  exp_plot.py
amftrack/pipeline/scripts/image_processing/: extract_nx_graph.py  extract_skel.py  extract_skel_2.py  extract_width.py  final_alignment.py  final_alignment_new.py  mask_skel.py  prune_skel.py  (+1 more)
amftrack/util/: sys.py
flow_analysis/: 241118_Tuto_FlowAnalysis.docx  AMF_Transport_AnalyzeKymographs.nb  AMF_Transport_DefineKymographs.m  AMF_Transport_ExtractTrajectories.m  AMF_Transport_ListFiles.m
test/pipeline/: test_image_analysis.py  test_network.ipynb  test_post_processing.py
test/util/: helper.py
(+2 files in other folders)
